--- a/build.gradle
+++ b/build.gradle
@@ -21,5 +21,7 @@ application {
 }
 
 dependencies {
+    compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.4'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
