--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,9 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.4'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+test {
+    useJUnit()
+
+    maxHeapSize = '1G'
+}
